[project]
name = "vllmrunner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "termplotlib>=0.3.9",
    "transformers[torch]==5.5.0",
    "vllm>=0.19.1rc1.dev2",
]

[tool.uv.sources]

[[tool.uv.index]]
url = "https://wheels.vllm.ai/nightly"

[tool.uv]
override-dependencies = [
    "transformers==5.5.0"
]
