[project]
name = "vllmrunner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "flashinfer-cubin>=0.6.8.post1",
    "flashinfer-python>=0.6.8.post1",
    "termplotlib>=0.3.9",
    "transformers",
    "vllm[audio,bench]>=0.19.1rc1.dev2",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'"
]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "vllm-nightly"
url = "https://wheels.vllm.ai/nightly/"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/"
explicit = true  # CRITICAL: Prevents PyPI from hijacking torch

[tool.uv.sources]
torch = { index = "pytorch" }
vllm = { index = "vllm-nightly" }
transformers = { git = "https://github.com/huggingface/transformers" }
