[project]
name = "vllmrunner"
version = "0.1.0"
description = "Gemma 4 12B QAT W4A16 vLLM runner"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "vllm[audio,bench]==0.22.1rc1.dev243+g3bb46975b",
    "termplotlib>=0.3.9",
    "transformers==5.10.0.dev0",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]

[[tool.uv.index]]
name = "vllm-nightly-cu130"
url = "https://wheels.vllm.ai/nightly/cu130"
explicit = true

[tool.uv.sources]
vllm = { index = "vllm-nightly-cu130" }
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "effde20942e3f82a1b97449f60b3a48c5ff96145" }
